@@ -38,7 +38,6 @@ message(STATUS)
 message(STATUS "USE_MATCHCOMPILER =     ${USE_MATCHCOMPILER}")
 message(STATUS "USE_MATCHCOMPILER_OPT = ${USE_MATCHCOMPILER_OPT}")
 message(STATUS)
-message(STATUS "DISABLE_CRTDBG_MAP_ALLOC = ${DISABLE_CRTDBG_MAP_ALLOC}")
 message(STATUS "NO_UNIX_SIGNAL_HANDLING = ${NO_UNIX_SIGNAL_HANDLING}")
 message(STATUS "NO_UNIX_BACKTRACE_SUPPORT = ${NO_UNIX_BACKTRACE_SUPPORT}")
 message(STATUS "NO_WINDOWS_SEH =        ${NO_WINDOWS_SEH}")
