@@ -35,12 +35,6 @@
 #  define CPPCHECKLIB
 #endif
 
-// MS Visual C++ memory leak debug tracing
-#if !defined(DISABLE_CRTDBG_MAP_ALLOC) && defined(_MSC_VER) && defined(_DEBUG)
-#  define _CRTDBG_MAP_ALLOC
-#  include <crtdbg.h>
-#endif
-
 // compatibility macros
 #ifndef __has_builtin
 #define __has_builtin(x) 0
